make_json. panel. tools make_json: apply correct read saved data. panel: add more visibility  for save button. tools: create different render methods for tools and page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@
 	width: 50px;
 }
 
+.toolItem.save {
+	background-color: #FF0;
+	color: #000;
+}
+
 
 
 /* Page Styles */
